# Universal-Timer

./: CMakeLists.txt  ExamCountdown_v1.cpp  ExamCountdown_v1.h  ExamCountdown_v1.pro  ExamCountdown_v1.qrc  ExamCountdown_v1.ui  README.md  Resource.rc  Universal-Timer.sln  Universal-Timer.vcxproj  Universal-Timer.vcxproj.filters  UniversalTimer.cpp  UniversalTimer.h  UniversalTimer.qrc  UniversalTimer.ui  config.ini  icon.rc  main.cpp  resources.qrc  timeconfig.ini
.github/workflows/: windows-build.yml
lang/: en_us.lang  zh_cn.lang  zh_tw.lang
lang/ar/: main.lang
lang/de/: main.lang
lang/en/: main.lang
lang/es/: main.lang
lang/fr/: main.lang
lang/ja/: main.lang
lang/ko/: main.lang
lang/ru/: main.lang
lang/zh-CN/: main.lang
lang/zh-Literary-CN/: main.lang
lang/zh-Literary-TW/: main.lang
src/: UniversalTimer.cpp  UniversalTimer.h  main.cpp
